# shutdown-timer

./: .gitignore  DESIGN.md  README.md  README_ja.md  README_zh.md  TEST_REPORT.md
src/: App.tsx  i18n.ts  index.html  main.tsx  package-lock.json  package.json  settings.ts  styles.css  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  shutdown.rs  sleep.rs
src/components/: Sidebar.tsx
src/data/: fonts.ts  preset-themes.ts
src/pages/: AppearancePage.tsx  LogsPage.tsx  SettingsPage.tsx  TimerPage.tsx
src/store/: AppStore.tsx
src/types/: app.ts  theme.ts
