[package]
name = "shutdown-timer"
version = "0.1.0"
description = "Windows Shutdown Timer with dual themes"
authors = ["you"]
edition = "2021"

[lib]
name = "shutdown_timer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset", "serde"] }

[target.'cfg(windows)'.dependencies]
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
